test/invalid/boolop_non_bool.py
# Boolean operation on non-boolean types (not bool or int)
def main() -> None:
    x: str = "hello"
    y: bool = x and True
    print(y)
